2002-11-05  Michael Meeks  <michael@ximian.com>

	* test/Makefile.am: disable test-metadata

	* libgnomevfs/gnome-vfs.h: remove
	gnome-vfs-metadata.h.

	* libgnomevfs/gnome-vfs-metadata-private.h,
	* libgnomevfs/gnome-vfs-metadata.h,
	* libgnomevfs/gnome-vfs-metadata.c: add
	generated files to CVS, so they can be
	canonicalized later if neccessary.

	* libgnomevfs/Makefile.am: disable gob
	builds, and remove generated files from
	install - immature / unfinished API.

	* configure.in: disable building gob.

2002-11-04 Frederic Vannere <homere@krow.org>

	* modules/ftp-method.c: add support for Microsoft and Netware FTP 
	  servers

2002-11-04  bugzilla-gnome@thewrittenword.com
	
	* configure.in:
	* libgnomevfs/gnome-vfs-method.c: check whether to use seteuid/setegid
	  or setresuid/setregid (fixes #96078)

2002-11-04  Jens Elkner <elkner@linofee.org>

	* configure.in: fixes --with-openssl-includes

2002-11-04  Josh Lucas  <josh@stonecottage.com>

	* test/test-shell.c: display more info, fixes #42800 
	
2002-11-03  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS

2002-11-02  Michael Meeks  <michael@ximian.com>

	* Version 2.1.3

	* libgnomevfs/Makefile.am: disable
	check-headers.pl, we have some path issues here.

	* modules/vfolder/Makefile.am: disable this, doesn't
	pass either (grr.)

2002-10-31  Bastien Nocera  <hadess@hadess.net>

	* modules/vfolder/network.vfolder-info.in: make writing to network:
	work again

2002-10-30  Bastien Nocera  <hadess@hadess.net>

	* modules/default-modules.conf:
	* modules/vfolder/Makefile.am:
	* modules/vfolder/network.vfolder-info.in: added network: scheme

2002-10-29  Jody Goldberg <jody@gnome.org>

	Patch from Christophe Fergeau <teuf@users.sourceforge.net>
	* libgnomevfs/gnome-vfs-file-info.h :  Add explicit flags to request
	  permissioning.
	* modules/file-method.c (get_access_info) : new.
	* modules/ssh-method.c (get_access_info) : new.