@@ -1,3 +1,11 @@
+2002-11-06  Christophe Fergeau <teuf@users.sourceforge.net>
+
+	* libgnomevfs/gnome-vfs-mime-magic.c
+	* libgnomevfs/gnome-vfs-mime-sniff-buffer.h: rework looks_like_text to
+	use glib functions, remove looks_like_gzip (moved in gnome-mime-data)
+	* libgnomevfs/gnome-vfs-mime.c: removed looks_like_gzip call, replaced
+	by a strcmp on the mime type returned by the sniff function
+
 2002-11-05  Michael Meeks  <michael@ximian.com>
 
 	* test/Makefile.am: disable test-metadata
